# KV_MD

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: run_all.py
src/eurostat_ai/: __init__.py  api.py  cli.py  config.py  datasets.py  jsonstat.py  plots.py
tests/: test_datasets.py  test_jsonstat.py
tests/fixtures/: sample_isoc_eb_ai.json
