
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eurostat-ai"
version = "0.1.0"
description = "Eurostat AI adoption data: load, clean, visualize"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "matplotlib>=3.7",
    "click>=8.1",
]
